# daskal_ai

./: .gitignore  README.md  pyproject.toml
data/chroma_db/: chroma.sqlite3
deploy/dev/argocd/: application.yaml
deploy/dev/base/: daskal-ai-pvc.yaml  deployment.yaml  ingress.yaml  kustomization.yaml
deploy/dev/dev1/: kustomization.yaml
deploy/dev/overlays/dev1/: kustomization.yaml
deploy/dev/overlays/dev2/: kustomization.yaml
deploy/dev/overlays/dev3/: kustomization.yaml
deploy/dev/overlays/dev4/: kustomization.yaml
deploy/dev/scripts/: replace-db.py  temp-pod.yaml
deploy/production/: daskal-ai-pvc.yaml  deployment.yaml  grafana-ingress.yaml  ingress.yaml  service.yaml
deploy/staging/: daskal-ai-pvc.yaml  deployment.yaml  ingress.yaml  service.yaml
src/: logging_config.json  main.py
src/api/: config_routes.py  routes.py
src/core/: config.py  dependencies.py
src/db/: config_db.py  vector_db.py
src/models/: config_schemas.py  schemas.py  settings_schemas.py
src/services/: embedding_factory.py  llm_factory.py  rag_service.py  reranking_factory.py
src/utils/: text_splitter.py
