[project]
name = "daskal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "kubernetes>=32.0.1",
    "kubernetes-typed>=18.20.2",
    "paramiko>=3.5.1",
    "types-requests>=2.32.0.20250328",
]
