[project]
name = "daskal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.0",
]
packages = [{ include = "app", from = "src" }]

[dependency-groups]
dev = [
    "ipython",
    "ipdb"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
