[project]
name = "daskal-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.49.0",
    "chromadb>=0.6.3",
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "voyageai>=0.3.2",
]
packages = [{ include = "app", from = "src" }]

[dependency-groups]
dev = [
    "black>=23.7.0",
    "ruff>=0.0.285",
    "pytest>=7.4.0",
]

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
namespace_packages = true
mypy_path = src/
